tests/NormalTests/paczka1/small_fuzzy/95463891.err
Error in line 3: A18 A18 656,1
Error in line 5: A18 A469 74,9
